# travelling-merchant

./: .gitignore  README.md  algo_Christofides.py  main.py  pyproject.toml
data/output/: map_travel_christofide.html  map_travel_genetic.html
graph_solver/: profilers.py  save_map.py  solve.py
graph_solver/models/: city.py  road.py  travel.py
graph_solver/solvers/: __init__.py  algorithm_christofide.py  genetic_algorithm.py
outs/: gen_algo.html  results.csv
src/: algorythm_christofide.py
src/domain/dataclass/: city.py  road.py  travel.py
src/parser/: csv_parser.py
src/solver/: algorythm_christofide.py  genetic_algorythm.py
tmp/: chris_out.html  gen_algo.html  results.csv
