[tool.poetry]
name = "travelling-merchant"
version = "0.1.0"
description = ""
authors = ["handriamaromanana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
folium = "^0.17.0"
loguru = "^0.7.2"
pandera = {extras = ["mypy"], version = "^0.20.1"}
black = {extras = ["jupyter"], version = "^24.4.2"}
ruff = "^0.6.7"
networkx = "^3.3"
icecream = "^2.1.3"
memory-profiler = "^0.61.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
icecream = "*"
ipykernel = "^6.29.5"

[tool.poetry.group.ci.dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
ruff = "*"
mypy = "*"
#Stubs
pandas-stubs = "*"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["docs", "archive"]
lint.select = ["E", "F", "W", "C90", "I", "UP", "PD", "PL"]
lint.ignore = ["D104", "D107", "D205", "D415"]
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 8
lint.mccabe.max-complexity = 5

[tool.mypy]
files = ["graph_solver"]
strict = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls = false


[[tool.mypy.overrides]]
module = [
    "smart_open.*",
    "icecream.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
